<resources>
    <string name="app_name">MyWeather</string>
    <string name="temp">Temp:</string>
    <string name="Temperature">Температура:</string>
    <string name="cloudiness">Облачность:</string>
    <string name="description">описание:</string>
    <string name="maxTemperature">макс. темп:</string>
    <string name="minTemperature">мин темп:</string>
    <string name="back">Назад</string>
    <string name="detailText">Подробная информация о \n погоде в вашем городе</string>
</resources>